# riptide_hardware

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
cfg/: 14432788.yaml  14490542.yaml  15662023.yaml  Torpedo.cfg  darknet_params.yaml  diagnostic_analyzers.yaml  diagnostic_thresholds.yaml  imu_columbus.yaml  imu_config.yaml  usb_cam.yaml  vectornav_imu_config.yaml  webcam_params.yaml
include/riptide_hardware/: dvl_processor.h
launch/: camera.launch  camera_jetson.launch  cameras.launch  cameras_jetson.launch  copro_agent.launch.py  coprocessor.launch  darknet_ros.launch  darknet_ros_jetson.launch  diagnostics.launch  diagnostics.launch.py  dvl.launch  dvl.launch.py  hardware.launch  hardware.launch.py  imu.launch  imu.launch.py  mynt_camera.launch  mynt_camera.launch.py  mynt_image_proc.launch.py  table_hardware.launch  underwater_camera.launch  underwater_camera.launch.py  webcam.launch.py  webcam_republish.launch.py
msg/: Depth.msg
old/: Readme.md
old/launch/: computer_monitor.launch  coprocessor.launch  dvl.launch  hardware.launch  mynt_camera.launch
old/scripts/: computer_monitor.py  coprocessor.py  sensor_monitor.py  voltage_monitor.py
riptide_hardware2/: common.py  computer_monitor.py  electrical_monitor.py  sensor_monitor.py  test_node.py  voltage_monitor.py
scripts/: acoustics.py  add_rule  calibrateThrusters.py  computer_monitor.py  coprocessor.py  electrical_monitor.py  sensor_monitor.py  voltage_monitor.py
src/: bag_to_csv.cpp  depth_processor.cpp  dvl_processor.cpp
