<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>riptide_hardware2</name>
  <version>0.0.18</version>
  <description>Hardware abstraction layer for OSU's Riptide AUV.</description>
  <maintainer email="osu.uwrt@gmail.com">OSU UWRT</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/osu-uwrt/riptide_hardware</url>

  <author email="cary.42@osu.edu">Conor Cary</author>
  <author email="fletcher.236@osu.edu">Charles Fletcher</author>
  <author email="justice.251@osu.edu">Benji Justice</author>
  <author email="pafford.9@osu.edu">Robert Pafford</author>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>mynteye_ros2_wrapper</exec_depend>
  <exec_depend>microstrain_inertial</exec_depend>
  <exec_depend>nortek_dvl</exec_depend>
  <exec_depend>riptide_msgs2</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>image_publisher</exec_depend>
  <exec_depend>image_proc</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
